Removed unused code

--- a/manifest.json
+++ b/manifest.json
@@ -1,17 +1,24 @@
 {
-    "manifest_version":3,
-    "version":"1.0",
-    "name":"WTT Extension",
-    "content_scripts":[
-        {
-         "matches":["*://worldtabletennis.com/*"],
-         "js":["locationList.js", "library/moment.js","library/moment-timezone-with-data.js", "contentscript.js"],
-         "run_at": "document_end"
-        }
+  "manifest_version": 3,
+  "version": "1.0",
+  "name": "WTT Extension",
+  "description": "An unofficial plugin to make WTT website friendlier to users",
+  "content_scripts": [
+    {
+      "matches": ["*://worldtabletennis.com/*"],
+      "js": [
+        "locationList.js",
+        "library/moment.js",
+        "library/moment-timezone-with-data.js",
+        "contentscript.js"
       ],
-    "background": {
-        "service_worker":"main.js"
-    },
-    "permissions": ["activeTab", "tabs", "webRequest"],
-    "host_permissions": ["*://*.azure-api.net/", "*://worldtabletennis.com/*"]
+      "run_at": "document_end"
+    }
+  ],
+  "icons": {
+    "16": "icons/icon16.png",
+    "32": "icons/icon32.png",
+    "48": "icons/icon48.png",
+    "128": "icons/icon128.png"
   }
+}
